--- a/public/host.html
+++ b/public/host.html
@@ -21,13 +21,15 @@
         font-family: sans-serif;
         height: 100%;
         width: 100%;
+        transform: scale(4);
+        transform-origin: top left;
       }
       .key {
         position: absolute;
         display: flex;
         align-items: end;
         justify-content: center;
-        font-size: 4px;
+        font-size: 20px;
         padding-bottom: 10px;
         text-transform: uppercase;
 
@@ -55,6 +57,10 @@
       }
 
       .key.active {
+        background-color: #f00;
+      }
+
+      .key.playing {
         background-color: #f00;
       }
     </style>
