--- a/public/host.html
+++ b/public/host.html
@@ -44,6 +44,7 @@
         align-items: center;
         justify-content: center;
         font-size: 100px;
+        height: 100vh;
       }
 
       .piano {
