--- a/public/host.html
+++ b/public/host.html
@@ -21,6 +21,11 @@
         --beige: #d5bb7e;
       }
 
+      a {
+        color: var(--yellow);
+        text-decoration: none;
+      }
+
       * {
         transition: all 0.15s ease-in-out;
       }
