--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://use.typekit.net/xkk6rjc.css" />
     <link href="/css/style.css" rel="stylesheet" />
+    <style>
+      .wrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        height: 100vh;
+      }
+    </style>
     <title>SOCKET SYNTH</title>
   </head>
   <body>
-    <h1>SOCKET SYNTH</h1>
+    <div class="wrapper">
+      <div>
+        <h1>SOCKET SYNTH</h1>
+        <a href="/host.html">HOST</a> | <a href="/client.html">CLIENT</a>
+      </div>
+    </div>
   </body>
 </html>
