--- a/public/host.html
+++ b/public/host.html
@@ -112,6 +112,11 @@
         <div class="key black" style="left: 260px" data-key="75"></div>
         <div class="key white" style="left: 270px" data-key="76"></div>
       </div>
+      <img
+        style="width: 300px; margin-top: 150px"
+        src="images/qr-code.png "
+        alt="QR Code"
+      />
     </div>
   </body>
 </html>
