--- a/public/host.html
+++ b/public/host.html
@@ -35,7 +35,7 @@
         font-family: sans-serif;
         border-radius: 10px;
         overflow: hidden;
-        width: 300px;
+        width: 450px;
         height: 100px;
         transform: scale(1);
         border: 3px solid #000;
@@ -111,6 +111,14 @@
         <div class="key white" style="left: 240px" data-key="74"></div>
         <div class="key black" style="left: 260px" data-key="75"></div>
         <div class="key white" style="left: 270px" data-key="76"></div>
+        <div class="key white" style="left: 300px" data-key="77"></div>
+        <div class="key black" style="left: 320px" data-key="78"></div>
+        <div class="key white" style="left: 330px" data-key="79"></div>
+        <div class="key black" style="left: 350px" data-key="80"></div>
+        <div class="key white" style="left: 360px" data-key="81"></div>
+        <div class="key black" style="left: 380px" data-key="82"></div>
+        <div class="key white" style="left: 390px" data-key="83"></div>
+        <div class="key white" style="left: 420px" data-key="84"></div>
       </div>
       <img
         style="width: 300px; margin-top: 150px"
