--- a/public/video-wall/screen-1.html
+++ b/public/video-wall/screen-1.html
@@ -29,7 +29,7 @@
       width="100%"
       height="100%"
       id="video"
-      src="screen-1.mov"
+      src="screen-1.mp4"
       muted
     ></video>
   </body>
