--- a/public/video-wall/screen-2.html
+++ b/public/video-wall/screen-2.html
@@ -29,7 +29,7 @@
       width="100%"
       height="100%"
       id="video"
-      src="screen-2.mov"
+      src="screen-2.mp4"
       muted
     ></video>
   </body>
